k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: patient-ml
  labels:
    name: patient-ml
    app: patient-deterioration-ml
